@@ -1,3 +1,10 @@
+2011-10-21  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [Qt][WK2] Unreviewed buildfix for newer Qt5. Remove duplicated defines.
+
+        * tests/util.h:
+        (waitForSignal):
+
 2011-10-20  Carol Szabo  <carol@webkit.org>
 
         Tiled Backing Store does not regenerate tiles when it should
